# mobility-ai

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  SETUP_INSTRUCTIONS.md  app.py  config.py  consumer.py  data_stream.py  dev-requirements.txt  docker-compose.yml  load_schedules.py  manifests  mbta.py  producer.py  pytest.ini  requirements.txt
.github/workflows/: kubernetes.yaml  lint.yml  run-kafka-produer-test.yml  run-unit-test.yml
data_streaming/: README.md
flask_app/: Dockerfile
flask_app/app/: __init__.py  (+2 more)
kafka_streams/: streams.sql
machine_learning/: Compress_teacher.py  DNN_train_base.py  Distill_student.py  README.md  delay_etl.py  gcp_dataloader.py  milestone_3_readme.md  ml_train.py
machine_learning_app/: .gitignore  .~lock.DEBUG_before.csv#  DEBUG_before.csv  Dockerfile  Dockerfile.prediction  Dockerfile.training  README.md  prediction-deployment.yaml  requirements.txt  requirements_prediction.txt  requirements_training.txt  reset_environment.sh  setup_environment.sh
milestone_submissions/: README.md  milestone_5.md
model_training/: .gitignore  Dockerfile.training  pyproject.toml
model_training/mbta_ml/: authenticate.py  config.py
model_training/mbta_ml/data/: ml_transit_training_data.csv
model_training/mbta_ml/etl/: gcp_dataloader.py  xgboost_etl.py
model_training/mbta_ml/ml/: ml_utils.py  xgboost_trainer.py
model_training/mbta_ml/production_models/: final_best_xgboost.json
postgres/: Dockerfile
tests/: flask_unit_test.py  kafka_consumer_utils_spark_functions_test.py  kafka_producer_configs_test.py
(+95 files in other folders)
