[tool.poetry]
name = "mbta-ml"
version = "4"
description = "Milestone 4 submission."
license = "MIT"
readme = "README.md"
authors = [
    "Kane Norman <kanenorman@g.harvard.edu>",
    "Philip Ndikum <philipndikum@g.harvard.edu>",
    "Juan Castillo <jcastillo@g.harvard.edu>",
    "David Wintermeyer <dwintermeyer@g.harvard.edu>"
]
packages = [{include = "mbta_ml/**/*"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
wandb = "^0.15.12"
scikit-learn = "^1.3.2"
haversine = "^2.8.0"
numpy = "^1.26.1"
tensorflow = "^2.14.0"
google-cloud-bigquery = "^3.12.0"
h3 = "^3.7.6"
pandas = "^2.1.1"
xgboost = "^2.0.1"
permetrics = "^1.5.0"
ray = {extras = ["train"], version = "^2.7.1"}
sktime = "^0.24.0"
google-auth = "^2.23.3"
google-cloud-storage = "^2.12.0"
db-dtypes = "^1.1.1"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
